--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@coreui/icons": "^2.1.0",
     "@coreui/icons-react": "^2.0.1",
     "@coreui/react": "^4.1.2",
+    "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
